# StakeClash

./: .env.example  .gitignore  HEDERA_VAULT_README.md  LAYOUT_ALIGNMENT_FIX.md  LIQUID_GLASS_IMPLEMENTATION.md  README.md  ROCKET_POOL_HOODI_GUIDE.md  ROCKET_POOL_IMPLEMENTATION_SUMMARY.js  THICK_GLASS_EFFECT.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  vitest.config.ts
.claude/: settings.json
3/: hardhat.config.ts  package-lock.json  package.json
3/contracts/: SimpleTimedRefundVault.sol
3/scripts/: deployRefundVault.ts  smokeRefundFlow.ts
contracts/: AaveUSDCSeasonVault.sol  HBARSeasonVault.sol  RocketPoolSeasonVault.sol
contracts/access/: Ownable2Step.sol
contracts/interfaces/: IReth.sol  IRocketDepositPool.sol
contracts/libraries/: SafeERC20.sol
contracts/token/: IERC20.sol
hiero-cli-pr/: CORE_DIFF.md  README.md  tsconfig.json  tsconfig.test.json  tsconfig.test.tsbuildinfo  tsconfig.tsbuildinfo
scripts/: deployAaveUSDCSeasonVault.js  deployRocketPoolVault.js  testSepoliaSend.ts
solana-season-vault/: .gitignore  Anchor.toml  README.md  package.json  shims.d.ts  tsconfig.json
solana-season-vault/programs/season_vault/: Cargo.toml
solana-season-vault/programs/season_vault/src/: lib.rs
src/: App.tsx  eth.ts  index.css  sendUsdc.ts  vite-env.d.ts
stakeclash-vault/: .env.example  .gitignore  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
test/: AaveUSDCSeasonVault.test-plan.md  RocketPoolSeasonVault.test.ts
(+126 files in other folders)
