[package]
name = "season_vault"
version = "0.1.0"
description = "Season-based SOL liquid staking vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "season_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bytemuck = "1.16.0"
spl-stake-pool = { version = "2.0.3", features = ["no-entrypoint"] }
